--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -147,3 +147,18 @@ footer {
     float: left;
     margin-right: 10px;
   }
+
+  /* forms */
+  
+  #error_explanation {
+    color: #f00;
+    ul {
+      list-style: none;
+      margin: 0 0 18px 0;
+    }
+  }
+
+  .field_with_errors {
+    @extend .control-group;
+    @extend .error;
+  }
