fix change gravatar link

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -22,6 +22,6 @@
     <% end %>
 
     <%= gravatar_for @user %>
-    <%= link_to image_tag("change"), "http://gravatar.com/emails", target: '_blank' %>
+    <%= link_to "change image", "http://gravatar.com/emails", target: '_blank' %>
   </div>
 </div>
