--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -4,10 +4,6 @@
     Posted <%= time_ago_in_words(micropost.created_at) %> ago.
   </span>
   <% if current_user?(micropost.user) %>
-    <%= link_to "delete", micropost, method: :delete,
-                    data: { confirm: "Are you sure?" }, 
-                    title: micropost.content %>
+    <%= render 'shared/delete_micropost', object: micropost %>
   <% end %>                  
 </li>
-
-  
